Moved gallery image opacity into the picture element, so the master gallery can put a black background on the sizer, and stop the article bleeding through to the images.

--- a/src/app/components/Gallery/_index.scss
+++ b/src/app/components/Gallery/_index.scss
@@ -105,7 +105,6 @@
   flex: 0 0 100%;
   overflow: hidden;
   position: relative;
-  opacity: .2;
   padding: 0 7.5px;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -114,12 +113,6 @@
   user-select: none;
   -webkit-user-drag: none;
   user-drag: none;
-  transition: .125s opacity;
-  will-change: opacity;
-
-  @media #{$mq-lg} {
-    transition-duration: .25s;
-  }
 
   .is-mosaic & {
     opacity: 1;
@@ -150,26 +143,21 @@
     }
   }
 
-  &.is-active {
-    opacity: 1;
-    transition-delay: .0625s;
-  }
-
   .Picture {
     cursor: pointer;
     cursor: -webkit-grab;
     cursor: -moz-grab;
     cursor: grab;
 
-    .is-moving & {
-      cursor: -webkit-grabbing;
-      cursor: -moz-grabbing;
-      cursor: grabbing;
-    }
-
     .is-mosaic & {
       display: none;
     }
+  }
+
+  &.is-moving .Picture {
+    cursor: -webkit-grabbing;
+    cursor: -moz-grabbing;
+    cursor: grabbing;
   }
 
   .Picture + .Picture {
@@ -178,6 +166,30 @@
     .is-mosaic & {
       display: block;
     }
+  }
+
+  picture {
+    opacity: .2;
+    transition: .125s opacity;
+    will-change: opacity;
+
+    @media #{$mq-lg} {
+      transition-duration: .25s;
+    }
+
+    .is-mosaic & {
+      opacity: 1;
+    }
+
+    .is-moving & {
+      transition-duration: 0s;
+    }
+
+  }
+
+  &.is-active picture {
+    opacity: 1;
+    transition-delay: .0625s;
   } 
 
   .Caption {
